--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8888
 
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
+
 #DB placeholders
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
@@ -7,3 +10,5 @@ spring.datasource.password=sa
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.security.user.password=user123
