--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 
 logging.level.root=INFO
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 
 #DB placeholders
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
@@ -11,4 +11,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.security.user.password=user123
+#spring.security.user.password=user123
